--- a/npm/packages/utils/tsconfig.json
+++ b/npm/packages/utils/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx", "development/index.tsx"],
   "exclude": ["**/__tests__/*", "**/development/**"],
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
