--- a/npm/packages/utils/tsconfig.json
+++ b/npm/packages/utils/tsconfig.json
@@ -9,6 +9,7 @@
     "resolveJsonModule": true,
     "baseUrl": "./src",
     "jsx": "react",
+    "module": "es6",
     "rootDir": "./src",
     "noEmit": false,
     "sourceMap": false,
