--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -2,6 +2,9 @@
   "name": "@helsenorge/eslint-config",
   "version": "1.1.0-alpha01",
   "main": "./index.js",
+  "maintainers": [
+    "ROX"
+  ],
   "files": [
     "index.js"
   ],
