--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/core-utils",
-  "version": "1.6.6-beta02",
+  "version": "1.6.6",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
