--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/core-utils",
-  "version": "1.6.23",
+  "version": "1.6.25",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "change-versions": "node scripts/change-versions.js",
     "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
-    "test": "helsenorge-scripts test --coverage --verbose",
+    "test": "helsenorge-scripts test",
     "test:watch": "helsenorge-scripts test --watch",
     "helsenorge-notify": "helsenorge-scripts notify"
   },
