--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/core-utils",
-  "version": "1.6.26",
+  "version": "1.7.0",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "change-versions": "node scripts/change-versions.js",
     "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
-    "test": "helsenorge-scripts test --coverage --verbose",
+    "test": "helsenorge-scripts test",
     "test:watch": "helsenorge-scripts test --watch",
     "helsenorge-notify": "helsenorge-scripts notify"
   },
@@ -19,7 +19,8 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@helsenorge/core-build": "13.0.0",
+    "@helsenorge/core-build": "^14.0.0-rc02",
+    "@helsenorge/designsystem-react": "1.0.0-beta.21",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
     "@types/redux": "^3.6.0",
