--- a/npm/packages/utils/tsconfig.json
+++ b/npm/packages/utils/tsconfig.json
@@ -4,18 +4,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strictNullChecks": true,
-    "target": "es5",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "baseUrl": "./src",
-    "jsx": "react",
-    "rootDir": "./src",
-    "noEmit": false,
-    "sourceMap": false,
-    "declaration": true,
-    "outDir": "./lib",
+    "baseUrl": ".",
     "typeRoots": ["node_modules/@types", "src/types"]
   },
-  "exclude": ["**/__devonly__/**"],
+  "exclude": ["./node_modules", "**/__devonly__/**"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "development/index.tsx"]
 }
