--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/core-utils",
-  "version": "1.7.0",
+  "version": "2.0.0-beta01",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
