--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/core-utils",
-  "version": "2.0.2",
+  "version": "3.0.0-esm01",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@helsenorge/core-build": "14.0.0",
+    "@helsenorge/core-build": "15.0.0-esm01",
     "@helsenorge/designsystem-react": "1.0.0-beta.22",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
