--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -3,6 +3,7 @@
   "sideEffects": false,
   "version": "3.0.0-esm01",
   "description": "samling av verktøy for hele helsenorge",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "node scripts/build.js",
