--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -5,7 +5,7 @@
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.cjs",
     "postbuild": "rimraf lib/_devonly",
     "change-versions": "node scripts/change-versions.js",
     "publish:beta": "cd lib && npm publish --tag=beta",
