--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -22,7 +22,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@helsenorge/core-build": "15.0.0-beta02",
+    "@helsenorge/core-build": "15.0.0-prettier02",
     "@helsenorge/designsystem-react": "1.0.0-beta.28",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
