--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "4.0.1",
+  "version": "5.0.0-beta01",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
