endrer date format

--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "5.1.0",
+  "version": "5.1.0-beta05",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
