--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "5.2.0",
+  "version": "5.3.0",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,8 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@helsenorge/core-build": "17.0.4",
-    "@helsenorge/designsystem-react": "1.0.0-beta36",
+    "@helsenorge/core-build": "17.0.0",
+    "@helsenorge/designsystem-react": "1.0.0-beta.34",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
     "@types/redux": "^3.6.0",
