--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "5.6.2",
+  "version": "6.0.0-beta01",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
