--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "5.7.0",
+  "version": "6.0.0-beta02",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
@@ -11,7 +11,6 @@
     "build": "node scripts/build.cjs",
     "postbuild": "rimraf lib/_devonly",
     "change-versions": "node scripts/change-versions.js",
-    "prepublishOnly": "npm run build",
     "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
     "test": "helsenorge-scripts test",
