--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "node scripts/build.cjs",
     "postbuild": "rimraf lib/_devonly",
+    "prepublishOnly": "npm run build",
     "change-versions": "node scripts/change-versions.js",
     "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
