--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/eslint-config",
-  "version": "1.1.1",
+  "version": "18.2.1",
   "main": "./index.js",
   "maintainers": [
     "ROX"
@@ -16,13 +16,13 @@
     }
   },
   "devDependencies": {
-    "typescript": "~3.8.3",
-    "copyfiles": "2.2.0"
+    "copyfiles": "2.2.0",
+    "typescript": "~3.8.3"
   },
   "dependencies": {
+    "@types/prettier": "1.19.0",
     "@typescript-eslint/eslint-plugin": "2.10.0",
     "@typescript-eslint/parser": "2.10.0",
-    "@types/prettier": "1.19.0",
     "eslint": "6.7.2",
     "eslint-config-prettier": "6.7.0",
     "eslint-plugin-prettier": "3.1.1",
