--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "18.2.1",
+  "version": "18.3.0-samvalgbeta",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
@@ -26,7 +26,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@helsenorge/core-build": "^18.2.1",
+    "@helsenorge/core-build": "^18.3.0-samvalgbeta",
     "@helsenorge/designsystem-react": "1.0.0-beta43",
     "@types/react-router-dom": "5.1.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
