--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -29,5 +29,6 @@
     "eslint-plugin-react": "7.17.0",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1"
-  }
+  },
+  "gitHead": "a06c863196dcfb6cf6b0ade52a40897e70d546ba"
 }
