--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/eslint-config",
-  "version": "19.1.0-samvalgbeta",
+  "version": "19.1.0-samvalgbeta02",
   "main": "./index.js",
   "maintainers": [
     "ROX"
