--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "19.1.0-samvalgbeta07",
+  "version": "19.1.0",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
@@ -26,8 +26,8 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@helsenorge/core-build": "^19.1.0-samvalgbeta07",
-    "@helsenorge/designsystem-react": "1.0.0-beta43",
+    "@helsenorge/core-build": "^19.1.0",
+    "@helsenorge/designsystem-react": "1.0.0-beta37",
     "@types/react-router-dom": "5.1.5",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
     "@types/redux": "^3.6.0",
@@ -56,5 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "gitHead": "a06c863196dcfb6cf6b0ade52a40897e70d546ba"
 }
