--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -56,5 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "gitHead": "b65d6536981f1a835cb171ea90fde4d55d3c99ad"
 }
