--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-testing-library": "^5.0.0",
     "prettier": "2.5.0",
     "pretty-quick": "3.1.2"
   }
