--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -25,10 +25,10 @@
     "@typescript-eslint/parser": "5.6.0",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "2.25.3",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-testing-library": "^5.0.1",
+    "eslint-plugin-testing-library": "5.0.1",
     "prettier": "2.5.1",
     "pretty-quick": "3.1.2"
   }
