--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -27,6 +27,9 @@
   ],
   "license": "ISC",
   "type": "module",
+  "peerDependencies": {
+    "@helsenorge/designsystem-react": "^1.0.0-beta"
+  },
   "devDependencies": {
     "@helsenorge/core-build": "^21.3.1",
     "@helsenorge/designsystem-react": "1.0.0-alpha-nye-spacers-5",
