--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -17,7 +17,11 @@
     "test": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test",
     "test:update": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --u",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx} --quiet",
+    "lint:fix": "npm run lint -- --fix --quiet=false",
     "prettier": "prettier --check src/**/*.{js,jsx,ts,tsx,css,scss,md,json}",
+    "prettier:fix": "npm run prettier -- --write",
+    "pretypecheck": "tsc -v",
+    "typecheck": "tsc --noEmit",
     "test:watch": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --watch",
     "helsenorge-notify": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js notify"
   },
