--- a/npm/packages/form/package.json
+++ b/npm/packages/form/package.json
@@ -19,9 +19,9 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "npm-run-all --npm-path build:lib build:copy-files",
-    "build:lib": "tsc --p config/tsconfig.toolkitcomponents.json",
-    "build:copy-files": "node scripts/copy-files.cjs",
+    "prebuild": "npm run clean",
+    "build": "tsc --p config/tsconfig.package.json",
+    "postbuild": "node scripts/copy-files.cjs",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:fix": "npm run lint -- --fix",
     "prettier": "prettier --check src/**/*.{js,jsx,ts,tsx,css,scss,md,json}",
@@ -32,7 +32,7 @@
     "test": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test",
     "test:update": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --u",
     "prepublishOnly": "npm run build",
-    "prebuild": "rimraf lib",
+    "clean": "rimraf lib",
     "precommit-script": "pretty-quick --staged"
   },
   "husky": {
@@ -43,11 +43,13 @@
   "peerDependencies": {
     "@helsenorge/core-build": ">=21.0.0",
     "@helsenorge/core-utils": ">=21.1.1",
+    "@helsenorge/toolkit": ">=21.1.1",
     "@helsenorge/designsystem-react": "^1.0.0-beta"
   },
   "devDependencies": {
     "@helsenorge/core-build": "^21.3.1",
     "@helsenorge/core-utils": "^21.6.3",
+    "@helsenorge/toolkit": "^21.6.3",
     "@helsenorge/designsystem-react": "1.0.0-alpha-nye-spacers-5"
   },
   "browserslist": [
