--- a/npm/packages/form/package.json
+++ b/npm/packages/form/package.json
@@ -40,16 +40,20 @@
     }
   },
   "peerDependencies": {
+    "@helsenorge/autosuggest": ">=21.1.1",
     "@helsenorge/core-build": ">=21.0.0",
     "@helsenorge/core-utils": ">=21.1.1",
-    "@helsenorge/toolkit": ">=21.1.1",
-    "@helsenorge/designsystem-react": "^1.0.0-beta"
+    "@helsenorge/date-time": ">=21.1.1",
+    "@helsenorge/designsystem-react": "^1.0.0-beta",
+    "@helsenorge/toolkit": ">=21.1.1"
   },
   "devDependencies": {
+    "@helsenorge/autosuggest": "^21.6.3",
     "@helsenorge/core-build": "^21.3.1",
     "@helsenorge/core-utils": "^21.6.3",
-    "@helsenorge/toolkit": "^21.6.3",
-    "@helsenorge/designsystem-react": "1.0.0-alpha-nye-spacers-5"
+    "@helsenorge/date-time": "^21.6.3",
+    "@helsenorge/designsystem-react": "1.0.0-alpha-nye-spacers-5",
+    "@helsenorge/toolkit": "^21.6.3"
   },
   "browserslist": [
     "> 0.2% in NO",
