--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@helsenorge/core-build": "^21.3.1",
-    "@helsenorge/designsystem-react": "1.0.0-alpha-nye-spacers-6",
+    "@helsenorge/designsystem-react": "1.0.0-beta101",
     "@types/react-router-dom": "5.1.5",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
     "@types/redux": "^3.6.0",
