--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "22.0.4",
+  "version": "22.1.0",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
     "directory": "lib"
   },
   "scripts": {
-    "prebuild": "rimraf lib",
     "build": "node scripts/build.cjs",
-    "postbuild": "rimraf lib/__devonly__",
+    "postbuild": "rimraf lib/_devonly",
     "prepublishOnly": "npm run build",
+    "change-versions": "node scripts/change-versions.js",
+    "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
     "test": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test",
     "test:update": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --u",
@@ -40,6 +41,7 @@
     "@types/react-shadow-dom-retarget-events": "1.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "ical.js": "1.4.0",
     "react-router-dom": "5.2.0"
   },
   "dependencies": {
