refactor: date-time ikke lenger avhengig av toolkit

--- a/npm/packages/date-time/package.json
+++ b/npm/packages/date-time/package.json
@@ -43,15 +43,13 @@
     "@helsenorge/core-build": ">22.0.0",
     "@helsenorge/core-utils": ">22.0.0",
     "@helsenorge/designsystem-react": "^1.0.0-beta",
-    "@helsenorge/form": ">22.0.0",
-    "@helsenorge/toolkit": ">22.0.0"
+    "@helsenorge/form": ">22.0.0"
   },
   "devDependencies": {
     "@helsenorge/core-build": "^22.0.0",
     "@helsenorge/core-utils": "^22.0.0",
     "@helsenorge/designsystem-react": "1.0.0-beta101",
     "@helsenorge/form": "^22.0.0",
-    "@helsenorge/toolkit": "^22.0.0",
     "@types/react-dates": "^21.8.1"
   },
   "dependencies": {
