--- a/npm/packages/form/config/tsconfig.package.json
+++ b/npm/packages/form/config/tsconfig.package.json
@@ -16,14 +16,5 @@
   },
 
   "include": ["../src/**/*.tsx", "../src/**/*.ts"],
-  "exclude": [
-    "../src/docs/*",
-    "../src/**/*test*",
-    "../src/**/*spec*",
-    "**/test.tsx",
-    "./**/test.tsx",
-    "./**/**/test.tsx",
-    "../src/**/example.tsx",
-    "../src/**/**/example.tsx"
-  ]
+  "exclude": ["../src/**/*test*", "../src/**/*spec*", "**/test.tsx", "./**/test.tsx", "./**/**/test.tsx"]
 }
