--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "22.3.0",
+  "version": "22.0.4",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
     "directory": "lib"
   },
   "scripts": {
+    "prebuild": "rimraf lib",
     "build": "node scripts/build.cjs",
-    "postbuild": "rimraf lib/_devonly",
+    "postbuild": "rimraf lib/__devonly__",
     "prepublishOnly": "npm run build",
-    "change-versions": "node scripts/change-versions.js",
-    "publish:beta": "cd lib && npm publish --tag=beta",
     "precommit-script": "pretty-quick --staged",
     "test": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test",
     "test:update": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --u",
@@ -36,16 +35,13 @@
   },
   "devDependencies": {
     "@helsenorge/core-build": "^22.0.4",
-    "@helsenorge/designsystem-react": "1.0.0-beta108",
-    "@types/react-router-dom": "5.1.5",
+    "@helsenorge/designsystem-react": "1.0.0-beta110",
+    "@types/react-router-dom": "5.3.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "ical.js": "1.4.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.3.0"
   },
   "dependencies": {
-    "react-shadow-dom-retarget-events": "1.0.11"
+    "react-shadow-dom-retarget-events": "1.1.0"
   },
   "husky": {
     "hooks": {
