--- a/npm/packages/file-upload/package.json
+++ b/npm/packages/file-upload/package.json
@@ -41,11 +41,11 @@
     }
   },
   "peerDependencies": {
-    "@helsenorge/core-build": ">22.0.0",
-    "@helsenorge/core-utils": ">22.0.0",
+    "@helsenorge/core-build": "^22.0.0",
+    "@helsenorge/core-utils": "^22.0.0",
     "@helsenorge/designsystem-react": "^1.0.0-beta",
-    "@helsenorge/form": ">22.0.0",
-    "@helsenorge/toolkit": ">22.0.0"
+    "@helsenorge/form": "^22.0.0",
+    "@helsenorge/toolkit": "^22.0.0"
   },
   "devDependencies": {
     "@helsenorge/core-build": "^22.0.0",
