--- a/npm/packages/eslint-config/package.json
+++ b/npm/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/eslint-config",
-  "version": "22.0.2",
+  "version": "23.0.0-alpha.0",
   "main": "./index.js",
   "maintainers": [
     "ROX"
