--- a/npm/packages/file-upload/package.json
+++ b/npm/packages/file-upload/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/file-upload",
-  "version": "22.0.0",
+  "version": "23.0.0-alpha.0",
   "main": "index.js",
   "publishConfig": {
     "directory": "lib"
@@ -48,11 +48,11 @@
     "@helsenorge/toolkit": "^22.0.0"
   },
   "devDependencies": {
-    "@helsenorge/core-build": "^22.0.0",
-    "@helsenorge/core-utils": "^22.0.0",
+    "@helsenorge/core-build": "^23.0.0-alpha.0",
+    "@helsenorge/core-utils": "^23.0.0-alpha.0",
     "@helsenorge/designsystem-react": "1.0.0-beta110",
-    "@helsenorge/form": "^22.0.0",
-    "@helsenorge/toolkit": "^22.0.0"
+    "@helsenorge/form": "^23.0.0-alpha.0",
+    "@helsenorge/toolkit": "^23.0.0-alpha.0"
   },
   "dependencies": {
     "react-dropzone": "12.0.4"
