--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "5.3.0"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "react-shadow-dom-retarget-events": "1.1.0"
   },
   "husky": {
