--- a/npm/packages/file-upload/package.json
+++ b/npm/packages/file-upload/package.json
@@ -41,11 +41,11 @@
     }
   },
   "peerDependencies": {
-    "@helsenorge/core-build": "^23.0.0-alpha",
-    "@helsenorge/core-utils": "^23.0.0-alpha",
+    "@helsenorge/core-build": "^23.0.0",
+    "@helsenorge/core-utils": "^23.0.0",
     "@helsenorge/designsystem-react": "^1.0.0-beta",
-    "@helsenorge/form": "^23.0.0-alpha",
-    "@helsenorge/toolkit": "^23.0.0-alpha"
+    "@helsenorge/form": "^23.0.0",
+    "@helsenorge/toolkit": "^23.0.0"
   },
   "devDependencies": {
     "@helsenorge/core-build": "^23.0.0-alpha.5",
