--- a/npm/packages/utils/package.json
+++ b/npm/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helsenorge/core-utils",
   "sideEffects": false,
-  "version": "23.0.0-alpha.5",
+  "version": "23.0.0",
   "description": "samling av verktøy for hele helsenorge",
   "main": "index.js",
   "publishConfig": {
@@ -34,7 +34,7 @@
     "@helsenorge/designsystem-react": "^1.0.0-beta"
   },
   "devDependencies": {
-    "@helsenorge/core-build": "^23.0.0-alpha.5",
+    "@helsenorge/core-build": "^23.0.0",
     "@helsenorge/designsystem-react": "1.0.0-beta116",
     "@types/react-router-dom": "5.3.3",
     "@types/react-shadow-dom-retarget-events": "1.0.0",
