--- a/npm/packages/form/config/tsconfig.package.json
+++ b/npm/packages/form/config/tsconfig.package.json
@@ -5,6 +5,7 @@
     "outDir": "../lib",
     "rootDir": "../src",
     "declaration": true,
+    "declarationMap": true,
     "removeComments": true,
     "baseUrl": "./src",
     "noEmit": false,
