--- a/npm/packages/utils/scripts/tsconfig.build.json
+++ b/npm/packages/utils/scripts/tsconfig.build.json
@@ -12,6 +12,7 @@
     "noEmit": false,
     "sourceMap": false,
     "declaration": true,
+    "declarationMap": true,
     "outDir": "../lib",
     "typeRoots": ["../../../../node_modules/@types", "../node_modules/@types", "../src/types"]
   },
