--- a/npm/packages/date-time/package.json
+++ b/npm/packages/date-time/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/date-time",
-  "version": "24.0.0-beta.4",
+  "version": "23.1.2",
   "main": "index.js",
   "publishConfig": {
     "directory": "lib"
@@ -41,16 +41,16 @@
     }
   },
   "peerDependencies": {
-    "@helsenorge/core-build": "^24.0.0-beta",
-    "@helsenorge/core-utils": "^24.0.0-beta",
+    "@helsenorge/core-build": "^23.0.0",
+    "@helsenorge/core-utils": "^23.0.0",
     "@helsenorge/designsystem-react": "^1.0.0-beta",
-    "@helsenorge/form": "^24.0.0-beta"
+    "@helsenorge/form": "^23.0.0"
   },
   "devDependencies": {
-    "@helsenorge/core-build": "^24.0.0-beta.4",
-    "@helsenorge/core-utils": "^24.0.0-beta.4",
+    "@helsenorge/core-build": "^23.0.5",
+    "@helsenorge/core-utils": "^23.1.0",
     "@helsenorge/designsystem-react": "1.0.0-beta120",
-    "@helsenorge/form": "^24.0.0-beta.4"
+    "@helsenorge/form": "^23.1.2"
   },
   "dependencies": {
     "@types/react-dates": "^21.8.3",
